Updated by task 'AutomatedMDTask_1698966827090_TM-MT_1698966874906'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/851f253c51755efcacbf3f46c40bd27de3930504

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,10 +4,10 @@ description: Notas de la versión de Analytics de 2023
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
-source-git-commit: 201923c09e0a176454b937c2d9503d54f8ea1c7f
+source-git-commit: c7d0648f43146bb823f49f47be2966c2589839e0
 workflow-type: tm+mt
-source-wordcount: '11809'
-ht-degree: 99%
+source-wordcount: '11180'
+ht-degree: 98%
 
 ---
 
@@ -52,10 +52,6 @@ AN-313983; AN-324189; AN-325095; AN-325677; AN-325886; AN-326068; AN-326360; AN-
 
 {style="table-layout:auto"}
 
-### AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.25.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
-
 ## Septiembre de 2023 {#sep23}
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
@@ -83,10 +79,6 @@ AN-314882; AN-315591; AN-318165; AN-318559; AN-319031; AN-319244; AN-321657; AN-
 | **Fin de la vida útil para Data Workbench** | 14 de septiembre de 2022 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**. Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/docs/data-workbench/using/eol.html?lang=es) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
 
 {style="table-layout:auto"}
-
-### AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.25.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
 
 ## Agosto de 2023 {#aug23}
 
@@ -126,10 +118,6 @@ AN-315605; AN-316306; AN-317494; AN-317844; AN-320424; AN-320597; AN-320680; AN-
 
 {style="table-layout:auto"}
 
-### AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.24.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
-
 ## Julio de 2023 {#july23}
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
@@ -164,10 +152,6 @@ AN-307816; AN-318111; AN-318584; AN-318828; AN-320440; AN-320568; AN-320616; AN-
 | **Fin de la vida útil para Data Workbench** | 14 de septiembre de 2022 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**. Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/docs/data-workbench/using/eol.html?lang=es) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
 
 {style="table-layout:auto"}
-
-### AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.24.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
 
 ## Junio de 2023 {#june23}
 
@@ -232,7 +216,6 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 | **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 25 de mayo de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento a **finales de junio de 2023 o principios de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se vea/utilice un ID de compra o ID de evento, cualquier visita futura, independientemente de cuándo, tendrá esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Para obtener más información y cronologías, consulte el aviso de fin de vida útil en la tabla siguiente. |
 | **Uso de nuevas IP por las fuentes de datos de Adobe Analytics y la salida de Data Warehouse en el Centro de datos de Londres** | 27 de abril de 2023 | Esto afecta a los clientes del Centro de datos de Londres que tienen solicitudes de fuentes de datos o informes de Data Warehouse que se entregan a un servicio FTP/SFTP. Los siguientes intervalos de direcciones IP deben añadirse a la configuración del cortafuegos para permitir el acceso: <ul><li>130.248.244.32/29</li><li>130.248.244.40/29</li></ul> |
-| **Los procesos de búsqueda de dispositivos ahora utilizan un tercero para todas las búsquedas de dispositivos** | 3 de marzo de 2023 | El 2 de marzo de 2023, como parte del despliegue de asistencia para las recomendaciones del cliente, actualizamos nuestros procesos de búsqueda de dispositivos para todas las búsquedas de dispositivos. Anteriormente, solo habíamos utilizado terceros para búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio se etiquetaron incorrectamente con el texto “mobile” (p. ej., “Mobile OS X 10.15.7” en lugar de “OS X 10.15.7”).<p>Durante el lanzamiento de Adobe en abril se coregirán estos nombres. El sistema de informes de Analytics y Customer Journey Analytics se actualizará de forma retroactiva, ya que su sistema de informes busca el nombre del sistema operativo en función de un ID registrado como parte de los datos de evento. Una vez actualizado el valor de búsqueda correspondiente a un ID, se corregirá la creación de informes, incluidos los datos históricos. Para los clientes de las [!UICONTROL Fuentes de datos], los cambios son retroactivos si utiliza un proceso de búsqueda similar al crear informes. Sin embargo, si almacena el valor del sistema operativo en los datos de evento, la creación de informes se actualizará en adelante únicamente. Consulte el [sistema operativo](/help/components/dimensions/operating-systems.md) para obtener más información. |
 
 {style="table-layout:auto"}
 
@@ -249,18 +232,13 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 
 {style="table-layout:auto"}
 
-## AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.23.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
-
-
 ## Abril de 2023 {#april23}
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
 | **Relleno para zonas protegidas que no sean de producción** | Al crear un flujo de datos del conector de origen de Analytics en una zona protegida que no sea de producción, el relleno de las zonas protegidas que no sean de producción estará limitado a 3 meses. Permanecerá a los 13 meses para las zonas protegidas de producción. | N/A | 26 de abril de 2023 |
 | **Filtrado de filas y columnas para el streaming del conector de origen de Analytics** | El conector de origen de Analytics en Adobe Experience Platform ahora permite filtrar los datos de Analytics que se usan para rellenar perfiles en el [Perfil del cliente en tiempo real](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=es). El filtrado de nivel de fila reduce el número de eventos asociados a perfiles. El filtrado a nivel de columna ayuda a reducir la riqueza de los propios eventos, lo que permite optimizar el uso de derechos de perfil. Este filtrado solo se aplica a los datos enviados al perfil del cliente en tiempo real y al [Servicio de identidad](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=es). **El filtrado no afecta a los datos que se envían al lago de datos para su uso en aplicaciones como Customer Journey Analytics**. [Más información](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=es#filtering-for-profile) | N/A | 29 de marzo de 2023 |
-| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-getting-started-admins/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
+| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
 | **Confusión de IP para Experience Edge** | Experience Edge admitirá la confusión de IP para los datos enviados directamente a Adobe Experience Platform. Esto beneficia a los clientes que envían datos directamente a Platform para su uso en Customer Journey Analytics u otras soluciones de Platform. La confusión de IP se ajusta en el nivel de flujo de datos. Admite la eliminación del último octeto o de toda la dirección IP.<p>**Nota**: La confusión NO se aplica a los datos enviados a Adobe Analytics. Analytics sigue obteniendo la IP completa. El procesamiento de IP se sigue realizando en Analytics por separado. En el futuro, planeamos permitir que los datos de Analytics se confundan en Edge. | N/A | Lanzamiento de Adobe Experience Platform el 26 de abril de 2023 |
 | **Diccionario de datos en Analysis Workspace** | El diccionario de datos ayuda a los usuarios y a los administradores a realizar el seguimiento de los componentes (dimensiones, métricas) en el entorno de Analytics, a administrarlos y a comprenderlos mejor. [Más información](/help/analyze/analysis-workspace/components/data-dictionary/data-dictionary-overview.md) | 15 de marzo de 2023 | 29 de marzo de 2023 |
 | **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | <p>Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es#share-public-link)</p> <p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html?lang=es#company-preferences)</p> | 3 de mayo de 2023 | Junio de 2023 |
@@ -285,8 +263,7 @@ AN-288373; AN-305144; AN-309023; AN-310466; AN-311686; AN-311705; AN-312018; AN-
 
 | Aviso | Fecha de incorporación o actualizada | Descripción |
 | ----------- | ---------- | ---------- |
-| **Aviso: Uso de nuevas IP por las fuentes de datos de Adobe Analytics y la salida de Data Warehouse en el Centro de datos de Londres** | 27 de abril de 2023 | Los clientes del Centro de datos de Londres que tengan solicitudes de fuentes de datos o informes de Data Warehouse que se envíen a un servicio FTP/SFTP deberán añadir los siguientes intervalos de direcciones IP a la configuración del cortafuegos para permitir el acceso: <ul><li>130.248.244.32/29</li><li>130.248.244.40/29</li></ul> |
-| **Los procesos de búsqueda de dispositivos ahora utilizan un tercero para todas las búsquedas de dispositivos** | 3 de marzo de 2023 | El 2 de marzo de 2023, como parte del despliegue de asistencia para las recomendaciones del cliente, actualizamos nuestros procesos de búsqueda de dispositivos para todas las búsquedas de dispositivos. Anteriormente, solo habíamos utilizado terceros para búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio se etiquetaron incorrectamente con el texto “mobile” (p. ej., “Mobile OS X 10.15.7” en lugar de “OS X 10.15.7”).<p>Durante el lanzamiento de Adobe en abril se coregirán estos nombres. El sistema de informes de Analytics y Customer Journey Analytics se actualizará de forma retroactiva, ya que su sistema de informes busca el nombre del sistema operativo en función de un ID registrado como parte de los datos de evento. Una vez actualizado el valor de búsqueda correspondiente a un ID, se corregirá la creación de informes, incluidos los datos históricos. Para los clientes de las [!UICONTROL Fuentes de datos], el cambio es retroactivo si utiliza un proceso de búsqueda similar al momento de crear informes. Sin embargo, si almacena el valor del sistema operativo en los datos de evento, la creación de informes se actualizará en adelante únicamente. Consulte el [sistema operativo](/help/components/dimensions/operating-systems.md) para obtener más información. |
+| **Aviso: Uso de nuevas IP por las fuentes de datos de Adobe Analytics y la salida de Data Warehouse en el Centro de datos de Londres** | 27 de abril de 2023 | Los clientes del Centro de datos de Londres que tengan solicitudes de fuentes de datos o informes de Data Warehouse que se envíen a un servicio FTP/SFTP deberán añadir los siguientes intervalos de direcciones IP a la configuración del cortafuegos para permitir el acceso: <ul><li>`130.248.244.32/29`</li><li>`130.248.244.40/29`</li></ul> |
 | **Actualización de las búsquedas de dispositivos en torno a las sugerencias del cliente de Google** | 27 de febrero de 2023 | El uso de sugerencias del cliente, planificado para el 16 de febrero de 2023, se pospuso para garantizar mejor la calidad de las búsquedas de dispositivos mediante sugerencias. El 27 de febrero de 2023, procedimos con la primera fase de la versión para admitir Sugerencias del cliente. La segunda y última fase de la versión se completó el jueves, 2 de marzo de 2023. [Más información](/help/technotes/client-hints.md) |
 | **Migración automática a la arquitectura del conjunto de clasificación** | 8 de febrero de 2023 | En los próximos meses, Adobe planea migrar todas las clasificaciones de todas las organizaciones a la arquitectura de clasificación más reciente. Se estima que los últimos clientes en migrar lo harán en mayo de 2023. No se requiere ninguna acción por parte del cliente y no se espera tiempo de inactividad. Esta nueva arquitectura tiene muchas ventajas, entre ellas estas:<ul><li>Reducción significativa del tiempo de procesamiento (72 horas → 24 horas)</li><li>La posibilidad de utilizar la IU de los [conjuntos de clasificación](/help/components/classifications/sets/overview.md)</li><li>La opción de usar datos de clasificación en Adobe Experience Platform en el futuro mediante el [Conector de origen de Adobe Analytics para datos de clasificación](https://experienceleague.adobe.com/docs/experience-platform/sources/connectors/adobe-applications/classifications.html?lang=es)</li></ul>Tenga en cuenta los siguientes cambios que pueden afectar potencialmente al flujo de trabajo de su organización:<ul><li>Al usar el explorador o la importación mediante FTP, “[!UICONTROL Sobrescribir en caso de conflicto]” siempre está habilitado.</li><li>Al utilizar el explorador o la importación mediante FTP, ya no se admite la opción de exportar inmediatamente después de la importación.</li><li>El punto final `GetDimensions` de la API de Analytics 2.0 ahora devuelve identificadores de cadena para clasificaciones, en lugar de identificadores numéricos. Se pueden seguir utilizando identificadores numéricos, pero Adobe recomienda utilizar los nuevos identificadores de cadena siempre que sea posible. Los identificadores numéricos se pueden recuperar utilizando el parámetro de cadena de consulta `?expansion=hidden`.</li></ul>Póngase en contacto con el Servicio de atención al cliente de Adobe si desea obtener una programación de migración más específica para su organización o si tiene preguntas o inquietudes acerca de esta migración. [Más información](/help/components/classifications/sets/overview.md) |
 
@@ -308,7 +285,7 @@ AN-288373; AN-305144; AN-309023; AN-310466; AN-311686; AN-311705; AN-312018; AN-
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-getting-started-admins/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
+| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
 | **Diccionario de datos en Analysis Workspace** | El diccionario de datos ayuda a los usuarios y a los administradores a realizar el seguimiento de los componentes (dimensiones, métricas) en el entorno de Analytics, a administrarlos y a comprenderlos mejor. [Más información](/help/analyze/analysis-workspace/components/data-dictionary/data-dictionary-overview.md) | 15 de marzo de 2023 | **No disponible temporalmente** |
 | **Historias de datos en paneles móviles** | Las historias de datos le permiten añadir varias vistas de detalles personalizables a mosaicos en proyectos de cuadros de resultados móviles. Utilice historias de datos para profundizar en los controladores clave, las métricas relacionadas y los diferentes pasos a lo largo del recorrido del cliente. Puede desplazarse fácilmente por estas vistas para comprender toda la historia detrás de las métricas clave. [Más información](/help/analyze/mobile-app/create-scorecard.md#create-data-story) | N/A | 8 de marzo de 2023 |
 | **Fechas de caducidad del proyecto programado** | Puede establecer las fechas de caducidad máximas para los proyectos programados hasta un año, independientemente de la frecuencia de programación. | N/A | 8 de marzo de 2023 |
@@ -325,7 +302,8 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 | Aviso | Fecha de incorporación o actualizada | Descripción |
 | ----------- | ---------- | ---------- |
-| **Los procesos de búsqueda de dispositivos ahora utilizan un tercero para todas las búsquedas de dispositivos** | 3 de marzo de 2023 | El 2 de marzo de 2023, como parte del despliegue de asistencia para las recomendaciones del cliente, actualizamos nuestros procesos de búsqueda de dispositivos para todas las búsquedas de dispositivos. Anteriormente, solo habíamos utilizado terceros para búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio se etiquetaron incorrectamente con el texto “mobile” (p. ej., “Mobile OS X 10.15.7” en lugar de “OS X 10.15.7”).<p>Durante el lanzamiento de Adobe en abril se coregirán estos nombres. El sistema de informes de Analytics y Customer Journey Analytics se actualizará de forma retroactiva, ya que su sistema de informes busca el nombre del sistema operativo en función de un ID registrado como parte de los datos de evento. Una vez actualizado el valor de búsqueda correspondiente a un ID, se corregirá la creación de informes, incluidos los datos históricos. Para los clientes de las [!UICONTROL Fuentes de datos], el cambio es retroactivo si utiliza un proceso de búsqueda similar al momento de crear informes. Sin embargo, si almacena el valor del sistema operativo en los datos de evento, la creación de informes se actualizará en adelante únicamente. Consulte el [sistema operativo](/help/components/dimensions/operating-systems.md) para obtener más información. |
+| **Actualización del proceso de búsqueda de dispositivos** | 2 de marzo de 2023 | Como parte del despliegue de soporte para sugerencias del cliente, Adobe ahora se asocia con DeviceAtlas para todas las búsquedas de dispositivos. Anteriormente, la asociación con DeviceAtlas solo incluía búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio se etiquetaron incorrectamente con el texto `"mobile"`. Por ejemplo, un elemento de dimensión muestra `"Mobile OS X 10.15.7"` en lugar de `"OS X 10.15.7 "`. El Adobe tiene previsto corregir estos nombres en la versión de abril. Los informes de Analytics y Customer Journey Analytics se actualizan de forma retroactiva. Para [!UICONTROL Fuentes de datos]Sin embargo, el cambio es retroactivo si almacena y utiliza el ID del sistema operativo al que se hace referencia en la búsqueda. Sin embargo, si realiza la búsqueda y almacena el valor real del sistema operativo en los datos, el cambio no es retroactivo. |
+| **Cambio en la granularidad del sistema operativo** | 2 de marzo de 2023 | La versión del parche del sistema operativo ahora se incluye en la [Sistema operativo](../components/dimensions/operating-systems.md) dimensión. Por ejemplo, un usuario con `OS X 10.15.7` anteriormente aparecía como `"OS X 10.15"`, pero ahora aparece como `"OS X 10.15.7"`. |
 | **Actualización de las búsquedas de dispositivos en torno a las sugerencias del cliente de Google** | 27 de febrero de 2023 | El uso de sugerencias del cliente, planificado para el 16 de febrero de 2023, se pospuso para garantizar mejor la calidad de las búsquedas de dispositivos mediante sugerencias. El 27 de febrero de 2023, procedimos con la primera fase de la versión para admitir Sugerencias del cliente. La segunda y última fase de la versión se completó el jueves, 2 de marzo de 2023. [Más información](/help/technotes/client-hints.md) |
 | **Disponibilidad del conector de origen de Analytics** | 15 de febrero de 2023 | El 28 de febrero de 2023, el conector de origen de Analytics estuvo disponible en el nuevo centro de datos de Adobe Experience Platform situado en Canadá. |
 | **Migración automática a la arquitectura del conjunto de clasificación** | 8 de febrero de 2023 | En los próximos meses, Adobe planea migrar todas las clasificaciones de todas las organizaciones a la arquitectura de clasificación más reciente. Se estima que los últimos clientes en migrar lo harán en mayo de 2023. No se requiere ninguna acción por parte del cliente y no se espera tiempo de inactividad. Esta nueva arquitectura tiene muchas ventajas, entre ellas estas:<ul><li>Reducción significativa del tiempo de procesamiento (72 horas → 24 horas)</li><li>La posibilidad de utilizar la IU de los [conjuntos de clasificación](/help/components/classifications/sets/overview.md)</li><li>La opción de usar datos de clasificación en Adobe Experience Platform en el futuro mediante el [Conector de origen de Adobe Analytics para datos de clasificación](https://experienceleague.adobe.com/docs/experience-platform/sources/connectors/adobe-applications/classifications.html?lang=es)</li></ul>Tenga en cuenta los siguientes cambios que pueden afectar potencialmente al flujo de trabajo de su organización:<ul><li>Al usar el explorador o la importación mediante FTP, “[!UICONTROL Sobrescribir en caso de conflicto]” siempre está habilitado.</li><li>Al utilizar el explorador o la importación mediante FTP, ya no se admite la opción de exportar inmediatamente después de la importación.</li><li>El punto final `GetDimensions` de la API de Analytics 2.0 ahora devuelve identificadores de cadena para clasificaciones, en lugar de identificadores numéricos. Se pueden seguir utilizando identificadores numéricos, pero Adobe recomienda utilizar los nuevos identificadores de cadena siempre que sea posible. Los identificadores numéricos se pueden recuperar utilizando el parámetro de cadena de consulta `?expansion=hidden`.</li></ul>Póngase en contacto con el Servicio de atención al cliente de Adobe si desea obtener una programación de migración más específica para su organización o si tiene preguntas o inquietudes acerca de esta migración. [Más información](/help/components/classifications/sets/overview.md) |
@@ -338,16 +316,11 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 | --- | --- | --- |
 | **Final de la vida útil del servicio japonés de seguimiento Feature Phone** | 21 de marzo de 2023 | Solo para nuestros clientes japoneses: a finales de mayo de 2023, el servicio japonés de seguimiento Feature Phone (mod_ktrack) dejará de funcionar. Pedimos disculpas por las molestias, pero le pedimos que desinstale o deshabilite los módulos instalados en su servidor Apache. Consulte las páginas 27 y 28 de [este documento](/help/release-notes/mod_ktrackforSiteCatalyst_ver1.40.pdf) como referencia. |
 | **EOL para [!DNL Reports & Analytics]** | 7 de marzo de 2023 | A partir del **31 de diciembre de 2023**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y sus informes y funciones correspondientes. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil.<p>El 31 de diciembre de 2023, finalizaremos muchas de las funciones de Reports &amp; Analytics asociadas, incluidas, entre otras, las siguientes: Informes programados, Extractos de datos e Informes DL. A partir del 31 de diciembre de 2023, ya no se enviarán los informes programados. En **Abril de 2023**, cualquier informe que estuviera programado para caducar después del 31 de diciembre de 2023 se actualizará automáticamente y se revertirá para que caduque el 31 de diciembre de 2023. Además, ya no puede programar informes futuros después del 31 de diciembre de 2023. |
-| **EOL de la métrica [!UICONTROL Personas]** | 9 de marzo de 2023 | Con la retirada de [[!DNL Device Co-op]](https://experienceleague.adobe.com/docs/discontinued/using/device-co-op.html?lang=es), la métrica Personas relacionada con la cooperación entre dispositivos ya no es relevante. El 8 de mayo de 2023, se eliminará la métrica [!UICONTROL Personas]. En ese momento, redireccionaremos sus datos a la métrica [!UICONTROL Visitante único] para evitar que se estropeen los proyectos, los segmentos y las métricas calculadas.<p>**Nota**: La métrica [[!UICONTROL Personas] vinculada a análisis multidispositivo](/help/components/metrics/people.md) no se ve afectado por este anuncio. |
+| **EOL de Device Co-op [!UICONTROL People] métrica** | 9 de marzo de 2023 | Con la retirada de [[!DNL Device Co-op]](https://experienceleague.adobe.com/docs/discontinued/using/device-co-op.html?lang=es), la métrica Personas relacionada con la cooperación entre dispositivos ya no es relevante. El 8 de mayo de 2023, se eliminará la métrica [!UICONTROL Personas]. En ese momento, redireccionaremos sus datos a la métrica [!UICONTROL Visitante único] para evitar que se estropeen los proyectos, los segmentos y las métricas calculadas.<p>**Nota**: La métrica [[!UICONTROL Personas] vinculada a análisis multidispositivo](/help/components/metrics/people.md) no se ve afectado por este anuncio. |
 | **Funcionalidad del final de vida útil de las [!UICONTROL Listas de publicación]** | 29 de septiembre de 2022 | Como parte del final de la vida útil de Reports &amp; Analytics, las [!UICONTROL Listas de publicación] están programadas para llegar al final de su vida útil en **diciembre de 2023**. No podrá crear [!UICONTROL Listas de publicación] nuevas ni acceder a las existentes para enviar o programar proyectos de [!UICONTROL Analysis Workspace]. |
 | **Fin de la vida útil para Data Workbench** | 14 de septiembre de 2022 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**. Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/docs/data-workbench/using/eol.html?lang=es) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
-| **EOL para [!DNL Reports & Analytics]** | 4 de enero de 2022 | A partir del **31 de diciembre de 2023**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y sus informes y funciones correspondientes. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://www.adobe.com/go/analytics_rnaeol_en) explica el proceso de finalización de la vida útil. |
 
 {style="table-layout:auto"}
-
-### AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.23.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
 
 ## Febrero de 2023 {#feb23}
 
@@ -425,7 +398,3 @@ AN-282634; AN-289684; AN-299597; AN-299630; AN-300128; AN-301633; AN-301683; AN-
 | **EOL para [!DNL Reports & Analytics]** | 4 de enero de 2022 | A partir del **31 de diciembre de 2023**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y sus informes y funciones correspondientes. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil. |
 
 {style="table-layout:auto"}
-
-### AppMeasurement
-
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.23.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
