--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -7,7 +7,7 @@ exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
 source-git-commit: c7d0648f43146bb823f49f47be2966c2589839e0
 workflow-type: tm+mt
 source-wordcount: '11180'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -302,8 +302,8 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 | Aviso | Fecha de incorporación o actualizada | Descripción |
 | ----------- | ---------- | ---------- |
-| **Actualización del proceso de búsqueda de dispositivos** | 2 de marzo de 2023 | Como parte del despliegue de soporte para sugerencias del cliente, Adobe ahora se asocia con DeviceAtlas para todas las búsquedas de dispositivos. Anteriormente, la asociación con DeviceAtlas solo incluía búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio se etiquetaron incorrectamente con el texto `"mobile"`. Por ejemplo, un elemento de dimensión muestra `"Mobile OS X 10.15.7"` en lugar de `"OS X 10.15.7 "`. El Adobe tiene previsto corregir estos nombres en la versión de abril. Los informes de Analytics y Customer Journey Analytics se actualizan de forma retroactiva. Para [!UICONTROL Fuentes de datos]Sin embargo, el cambio es retroactivo si almacena y utiliza el ID del sistema operativo al que se hace referencia en la búsqueda. Sin embargo, si realiza la búsqueda y almacena el valor real del sistema operativo en los datos, el cambio no es retroactivo. |
-| **Cambio en la granularidad del sistema operativo** | 2 de marzo de 2023 | La versión del parche del sistema operativo ahora se incluye en la [Sistema operativo](../components/dimensions/operating-systems.md) dimensión. Por ejemplo, un usuario con `OS X 10.15.7` anteriormente aparecía como `"OS X 10.15"`, pero ahora aparece como `"OS X 10.15.7"`. |
+| **Actualización del proceso de búsqueda de dispositivos** | 2 de marzo de 2023 | Como parte del despliegue de soporte de sugerencias del cliente, Adobe ahora se ha asociado con DeviceAtlas para todas las búsquedas de dispositivos. Anteriormente, la asociación con DeviceAtlas solo incluía búsquedas de dispositivos móviles. Como parte de ese despliegue, algunos sistemas operativos de escritorio no se etiquetaron correctamente con el texto `"mobile"`. Por ejemplo, un elemento de dimensión muestra `"Mobile OS X 10.15.7"` en lugar de `"OS X 10.15.7 "`. Adobe tiene previsto corregir estos nombres en la versión de abril. Los informes de Analytics y Customer Journey Analytics se actualizan de forma retroactiva. Para [!UICONTROL Fuentes de datos], el cambio es retroactivo si se almacena y se utiliza el ID del sistema operativo al que se hace referencia en la búsqueda. Sin embargo, si se realiza la búsqueda y se almacena el valor real del sistema operativo en los datos, el cambio no será retroactivo. |
+| **Cambio en la granularidad del sistema operativo** | 2 de marzo de 2023 | La versión de parche del sistema operativo ahora se ha incluido en la dimensión [Sistema operativo](../components/dimensions/operating-systems.md). Por ejemplo, un usuario con `OS X 10.15.7`, anteriormente aparecía como `"OS X 10.15"`, pero ahora aparece como `"OS X 10.15.7"`. |
 | **Actualización de las búsquedas de dispositivos en torno a las sugerencias del cliente de Google** | 27 de febrero de 2023 | El uso de sugerencias del cliente, planificado para el 16 de febrero de 2023, se pospuso para garantizar mejor la calidad de las búsquedas de dispositivos mediante sugerencias. El 27 de febrero de 2023, procedimos con la primera fase de la versión para admitir Sugerencias del cliente. La segunda y última fase de la versión se completó el jueves, 2 de marzo de 2023. [Más información](/help/technotes/client-hints.md) |
 | **Disponibilidad del conector de origen de Analytics** | 15 de febrero de 2023 | El 28 de febrero de 2023, el conector de origen de Analytics estuvo disponible en el nuevo centro de datos de Adobe Experience Platform situado en Canadá. |
 | **Migración automática a la arquitectura del conjunto de clasificación** | 8 de febrero de 2023 | En los próximos meses, Adobe planea migrar todas las clasificaciones de todas las organizaciones a la arquitectura de clasificación más reciente. Se estima que los últimos clientes en migrar lo harán en mayo de 2023. No se requiere ninguna acción por parte del cliente y no se espera tiempo de inactividad. Esta nueva arquitectura tiene muchas ventajas, entre ellas estas:<ul><li>Reducción significativa del tiempo de procesamiento (72 horas → 24 horas)</li><li>La posibilidad de utilizar la IU de los [conjuntos de clasificación](/help/components/classifications/sets/overview.md)</li><li>La opción de usar datos de clasificación en Adobe Experience Platform en el futuro mediante el [Conector de origen de Adobe Analytics para datos de clasificación](https://experienceleague.adobe.com/docs/experience-platform/sources/connectors/adobe-applications/classifications.html?lang=es)</li></ul>Tenga en cuenta los siguientes cambios que pueden afectar potencialmente al flujo de trabajo de su organización:<ul><li>Al usar el explorador o la importación mediante FTP, “[!UICONTROL Sobrescribir en caso de conflicto]” siempre está habilitado.</li><li>Al utilizar el explorador o la importación mediante FTP, ya no se admite la opción de exportar inmediatamente después de la importación.</li><li>El punto final `GetDimensions` de la API de Analytics 2.0 ahora devuelve identificadores de cadena para clasificaciones, en lugar de identificadores numéricos. Se pueden seguir utilizando identificadores numéricos, pero Adobe recomienda utilizar los nuevos identificadores de cadena siempre que sea posible. Los identificadores numéricos se pueden recuperar utilizando el parámetro de cadena de consulta `?expansion=hidden`.</li></ul>Póngase en contacto con el Servicio de atención al cliente de Adobe si desea obtener una programación de migración más específica para su organización o si tiene preguntas o inquietudes acerca de esta migración. [Más información](/help/components/classifications/sets/overview.md) |
@@ -316,7 +316,7 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 | --- | --- | --- |
 | **Final de la vida útil del servicio japonés de seguimiento Feature Phone** | 21 de marzo de 2023 | Solo para nuestros clientes japoneses: a finales de mayo de 2023, el servicio japonés de seguimiento Feature Phone (mod_ktrack) dejará de funcionar. Pedimos disculpas por las molestias, pero le pedimos que desinstale o deshabilite los módulos instalados en su servidor Apache. Consulte las páginas 27 y 28 de [este documento](/help/release-notes/mod_ktrackforSiteCatalyst_ver1.40.pdf) como referencia. |
 | **EOL para [!DNL Reports & Analytics]** | 7 de marzo de 2023 | A partir del **31 de diciembre de 2023**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y sus informes y funciones correspondientes. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil.<p>El 31 de diciembre de 2023, finalizaremos muchas de las funciones de Reports &amp; Analytics asociadas, incluidas, entre otras, las siguientes: Informes programados, Extractos de datos e Informes DL. A partir del 31 de diciembre de 2023, ya no se enviarán los informes programados. En **Abril de 2023**, cualquier informe que estuviera programado para caducar después del 31 de diciembre de 2023 se actualizará automáticamente y se revertirá para que caduque el 31 de diciembre de 2023. Además, ya no puede programar informes futuros después del 31 de diciembre de 2023. |
-| **EOL de Device Co-op [!UICONTROL People] métrica** | 9 de marzo de 2023 | Con la retirada de [[!DNL Device Co-op]](https://experienceleague.adobe.com/docs/discontinued/using/device-co-op.html?lang=es), la métrica Personas relacionada con la cooperación entre dispositivos ya no es relevante. El 8 de mayo de 2023, se eliminará la métrica [!UICONTROL Personas]. En ese momento, redireccionaremos sus datos a la métrica [!UICONTROL Visitante único] para evitar que se estropeen los proyectos, los segmentos y las métricas calculadas.<p>**Nota**: La métrica [[!UICONTROL Personas] vinculada a análisis multidispositivo](/help/components/metrics/people.md) no se ve afectado por este anuncio. |
+| **EOL de la métrica [!UICONTROL Personas] de cooperación rentre dispositivos** | 9 de marzo de 2023 | Con la retirada de [[!DNL Device Co-op]](https://experienceleague.adobe.com/docs/discontinued/using/device-co-op.html?lang=es), la métrica Personas relacionada con la cooperación entre dispositivos ya no es relevante. El 8 de mayo de 2023, se eliminará la métrica [!UICONTROL Personas]. En ese momento, redireccionaremos sus datos a la métrica [!UICONTROL Visitante único] para evitar que se estropeen los proyectos, los segmentos y las métricas calculadas.<p>**Nota**: La métrica [[!UICONTROL Personas] vinculada a análisis multidispositivo](/help/components/metrics/people.md) no se ve afectado por este anuncio. |
 | **Funcionalidad del final de vida útil de las [!UICONTROL Listas de publicación]** | 29 de septiembre de 2022 | Como parte del final de la vida útil de Reports &amp; Analytics, las [!UICONTROL Listas de publicación] están programadas para llegar al final de su vida útil en **diciembre de 2023**. No podrá crear [!UICONTROL Listas de publicación] nuevas ni acceder a las existentes para enviar o programar proyectos de [!UICONTROL Analysis Workspace]. |
 | **Fin de la vida útil para Data Workbench** | 14 de septiembre de 2022 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**. Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/docs/data-workbench/using/eol.html?lang=es) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
 
